switch min bin level to 8 remove the need for doclint:none in javadoc revert api dependency to the version available in central
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>